--- a/environments/production/production-deploy.yml
+++ b/environments/production/production-deploy.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: app-container
-          image: anupamdevops/environments:sage
+          image: anupamdevops/environments:stage
           ports:
             - containerPort: 80 
           # resources:
