creating the repository

--- a/environments/development/dev-deploy.yml
+++ b/environments/development/dev-deploy.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: app-container
-          image: anupamdevops/environments:development
+          image: anupamdevops/environments:stage
           ports:
             - containerPort: 80 
           # resources:
