--- a/environments/stage/argocd.yml
+++ b/environments/stage/argocd.yml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argocd-app
+  name: argocd-stage-app
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/anupamduttadevops/kubernetes.git
-    targetRevision: HEAD
-    path: environments/production
+    targetRevision: stage
+    path: environments/stage
   destination:
     server: https://kubernetes.default.svc
-    namespace: production
+    namespace: stage
   syncPolicy:
     automated:
       selfHeal: true
